--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
         id: upload_release
         uses: svenstaro/upload-release-action@v2
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: ${{ secrets.OPENWRT_WORKFLOW_TOKEN }}
           release_name: OpenWrt-Packages-${{ matrix.arch }}-${{ matrix.tag }}  # 添加版本tag
           tag: ${{ matrix.arch }}-${{ matrix.tag }}  # 添加版本tag
           body: Latest build on ${{env.latest_release}}
