--- a/.github/workflows/update_openwrt_feeds.yml
+++ b/.github/workflows/update_openwrt_feeds.yml
@@ -1,9 +1,9 @@
 name: Update OpenWrt Feeds
 
 on:
-  schedule:
-    - cron: '0 16 * * *'
   workflow_dispatch:
+  schedule:
+    - cron: "30 18 * * *"
 
 jobs:
   sync:
