--- a/.github/workflows/update_openwrt_feeds.yml
+++ b/.github/workflows/update_openwrt_feeds.yml
@@ -43,3 +43,10 @@ jobs:
           token: ${{ secrets.OPENWRT_WORKFLOW_TOKEN }}
           repository: lonecale/openwrt-adguardhome
           event-type: build
+
+      # 清理工作流
+      - name: Cleanup Workflow
+        uses: Mattraks/delete-workflow-runs@main
+        with:
+          retain_days: 0
+          keep_minimum_runs: 2
